app/javascript/flavours/polyam/styles/components/status.scss
.status__content--with-action {
  cursor: pointer;
}

.status__content {
  clear: both;
}

// Polyam: Split out from .status__content, .edit-indicator__content, .reply-indicator__content upstream
.status__content {
  @include status-content;
}

.status__content {
  // glitch: necessary for fullwidth media options
  overflow: visible;
}

.status__content__read-more-button,
.status__content__translate-button {
  display: flex;
  align-items: center;
  font-size: 15px;
  line-height: 22px;
  color: $highlight-text-color;
  border: 0;
  background: transparent;
  padding: 0;
  padding-top: 16px;
  text-decoration: none;

  &:hover,
  &:active {
    text-decoration: underline;
  }

  .icon {
    width: 15px;
    height: 15px;
  }
}

.translate-button {
  margin-top: 16px;
  font-size: 15px;
  line-height: 20px;
  display: flex;
  justify-content: space-between;
  color: $dark-text-color;
}

.status__content__spoiler-link {
  display: inline-flex; // glitch: media icon in spoiler button
  border-radius: 2px;
  background: transparent;
  border: 0;
  color: $inverted-text-color;
  font-weight: 700;
  font-size: 11px;
  padding: 0 6px;
  text-transform: uppercase;
  line-height: 20px;
  cursor: pointer;
  vertical-align: top;
  align-items: center; // glitch: content indicator

  &:hover {
    background: lighten($ui-base-color, 33%);
    text-decoration: none;
  }

  .status__content__spoiler-icon {
    display: inline-block;
    margin-inline-start: 5px;
    border-inline-start: 1px solid currentColor;
    padding: 0;
    padding-inline-start: 4px;
    width: 16px;
    height: 16px;
  }
}

.status__wrapper--filtered {
  color: $dark-text-color;
  border: 0;
  font-size: inherit;
  text-align: center;
  line-height: inherit;
  margin: 0;
  padding: 15px;
  box-sizing: border-box;
  width: 100%;
  clear: both;
  border-bottom: 1px solid var(--background-border-color);

  &__button {
    display: inline;
    color: lighten($ui-highlight-color, 8%);
    border: 0;
    background: transparent;
    padding: 0;
    font-size: inherit;
    line-height: inherit;

    &:hover,
    &:active {
      text-decoration: underline;
    }
  }
}

.focusable {
  &:focus {
    outline: 0;
    background: rgba($ui-highlight-color, 0.05);
  }
}
/* ... */

